[package]
name = "native-messaging-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "async-process", "unstable", "futures-core"] }
byteorder = "1.4.3"
libc = "0.2.147"
log = "0.4.19"
parse_arg = "0.1.4"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
